--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 .image IMG { 
-	width: 1920px;
-height: 1080px;
-border: none;}
+	left: 1800px;}
 
 
 .bkimg{
@@ -15,21 +13,151 @@ border: none;}
 
 .back { left: 0px; top: 0px; }
 
-.container 
-{
+.container {
     position: relative;
+    left: 310px;
     width: 100%;
-    left: 0%;
+    max-width: 2104px;
+}
+
+.container img {
+    width: 100%;
     height: auto;
 }
 
+.container .btn1 {
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn1:hover {
+    background-color: black;
+}
 
 
-.round {
- width: 100px; height: 100px;
- background-color: gray;
- border-radius: 50%;
- border: none;
-top: 50px;
-left: 50px;
+.container .btn2 {
+    position: absolute;
+    top: 300px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn2:hover {
+    background-color: black;
+}
+
+
+.container .btn3 {
+    position: absolute;
+    top: 500px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn3:hover {
+    background-color: black;
+}
+
+
+.container .btn4 {
+    position: absolute;
+    top: 700px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn4:hover {
+    background-color: black;
+}
+
+
+.container .btn5 {
+    position: absolute;
+    top: 900px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn5:hover {
+    background-color: black;
+}
+
+
+.container .btn6 {
+    position: absolute;
+    top: 1100px;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    width: 150px; 
+    height: 150px;
+}
+
+.container .btn6:hover {
+    background-color: black;
 }
