--- a/style.css
+++ b/style.css
@@ -277,10 +277,29 @@
 }
 
 
+.text8{
+    position: absolute;
+    top: 150px;
+    left: 30px;
+    color: #545252;
+    font-family: Proxima Nova;
+    font-size: 25px;
+}
+
+.text9{
+    position: absolute;
+    top: 5px;
+    left: 400px;
+    color: black;
+    font-family: segoe print;
+    font-size: 56px;
+}
+
+
 .f {
     position: absolute;
-    left: 100px;
-    top: 100px;
+    left: 0px;
+    top: 230px;
 }
 
 
@@ -295,3 +314,73 @@
 .txcl {
     color: red;
 }
+
+
+
+input[type="text"]{
+display: inline-block;
+width: 700px;
+height: 120px;
+box-sizing: border-box;
+outline: none;
+border: 0px solid lightgray;
+border-radius: 35px;
+padding: 10px 25px;
+transition: all 0.3s ease-out;
+transition-delay: 0.2s;
+background-color: transparent;
+font-weight: lighter;
+    font-size: 50px;
+    font-family: Proxima Nova;
+    color: black;
+}
+
+input[type="date"]{
+display: inline-block;
+width: 320px;
+height: 140px;
+box-sizing: border-box;
+outline: none;
+border: 0px solid lightgray;
+border-radius: 35px;
+padding: 1px 2px;
+transition: all 0.3s ease-out;
+transition-delay: 0.2s;
+background-color: transparent;
+font-weight: lighter;
+    font-size: 50px;
+    font-family: Proxima Nova;
+    color: black;
+}
+
+
+input[type="button"]{
+
+position: absolute;
+width: 207px;
+height: 57px;
+  border: 0px solid white;
+  background-color: white;
+  border-radius: 35px;
+
+    display: flex;
+align-items: center;
+justify-content: center;
+color: black;
+font-weight: lighter;
+    font-size: 25px;
+    font-family: Proxima Nova;
+    top: 850px;
+    left: 22px;
+}
+
+
+input[type="button"]:active {
+  box-shadow: inset 0 3px 7px #262c99;
+  padding: 1px 0 0 1px;
+}
+
+::-webkit-input-placeholder {color:gray;}
+::-moz-placeholder          {color:gray;}
+:-moz-placeholder           {color:gray}
+:-ms-input-placeholder      {color:gray;}
