--- a/style.css
+++ b/style.css
@@ -293,13 +293,14 @@
     color: black;
     font-family: segoe print;
     font-size: 56px;
+    font-weight: bold;
 }
 
 
 .f {
     position: absolute;
     left: 0px;
-    top: 230px;
+    top: 240px;
 }
 
 
@@ -312,12 +313,17 @@
 
 
 .txcl {
+    position: absolute;
     color: red;
+    top: 220px;
+    left: 30px;
+    font-family: Proxima Nova;
+    font-size: 20px;
 }
 
 
-
 input[type="text"]{
+    position: relative;
 display: inline-block;
 width: 700px;
 height: 120px;
@@ -333,9 +339,11 @@ font-weight: lighter;
     font-size: 50px;
     font-family: Proxima Nova;
     color: black;
+    opacity: 0.6;;
 }
 
 input[type="date"]{
+    position: relative;
 display: inline-block;
 width: 320px;
 height: 140px;
@@ -380,7 +388,334 @@ input[type="button"]:active {
   padding: 1px 0 0 1px;
 }
 
-::-webkit-input-placeholder {color:gray;}
-::-moz-placeholder          {color:gray;}
-:-moz-placeholder           {color:gray}
-:-ms-input-placeholder      {color:gray;}
+::-webkit-input-placeholder {color:#156C60;}
+::-moz-placeholder          {color:#156C60;}
+:-moz-placeholder           {color:#156C60}
+:-ms-input-placeholder      {color:#156C60;}
+
+
+.round1 {
+    position: absolute;
+width: 750px;
+height: 80px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 20px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity1{
+opacity: 0.2;
+}
+
+.round2 {
+    position: absolute;
+width: 750px;
+height: 80px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 144px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity2{
+opacity: 0.2;
+}
+
+
+.round3 {
+    position: absolute;
+width: 750px;
+height: 80px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 268px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity3{
+opacity: 0.2;
+}
+
+
+.round4 {
+    position: absolute;
+width: 750px;
+height: 80px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 392px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity4{
+opacity: 0.2;
+}
+
+
+.round5 {
+    position: absolute;
+width: 750px;
+height: 80px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 516px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity5{
+opacity: 0.2;
+}
+
+
+.round6 {
+    position: absolute;
+width: 750px;
+height: 180px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 35px;
+  top: 640px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
+
+.opacity6{
+opacity: 0.2;
+}
+
+
+.fix{
+    position: fixed;
+}
+
+
+.usl1{
+    position: absolute;
+    top: 180px;
+    font-size: 42px;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-weight: bold;
+    width: 1000px;
+    text-align: center;
+}
+
+
+
+.usl2{
+    position: absolute;
+    left: 0px;
+    top: 260px;
+    font-size: 30px;
+    font-family: Proxima Nova;
+    text-align: justify;
+    width: 1000px;
+}
+
+.round7 {
+position: absolute;
+width: 1000px;
+height: 50px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 180px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+    opacity: 0.2;
+}
+
+
+
+.usl3{
+    position: absolute;
+    top: 540px;
+    font-size: 42px;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-weight: bold;
+    width: 1000px;
+    text-align: center;
+}
+
+
+
+.usl4{
+    position: absolute;
+    left: 0px;
+    top: 620px;
+    font-size: 30px;
+    font-family: Proxima Nova;
+    text-align: justify;
+    width: 1000px;
+}
+
+
+.round8 {
+    position: absolute;
+width: 1000px;
+height: 50px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 540px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+    opacity: 0.2;
+}
+
+
+
+.usl5{
+    position: absolute;
+    top: 1040px;
+    font-size: 42px;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-weight: bold;
+    width: 1000px;
+    text-align: center;
+}
+
+
+
+.usl6{
+    position: absolute;
+    left: 0px;
+    top: 1120px;
+    font-size: 30px;
+    font-family: Proxima Nova;
+    text-align: justify;
+    width: 1000px;
+}
+
+
+.round9 {
+    position: absolute;
+width: 1000px;
+height: 50px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 1040px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+    opacity: 0.2;
+}
+
+
+
+.usl7{
+    position: absolute;
+    top: 1565px;
+    font-size: 42px;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-weight: bold;
+    width: 1000px;
+    text-align: center;
+}
+
+
+
+.usl8{
+    position: absolute;
+    left: 0px;
+    top: 1610px;
+    font-size: 30px;
+    font-family: Proxima Nova;
+    text-align: justify;
+    width: 1000px;
+}
+
+
+.round10 {
+    position: absolute;
+width: 1000px;
+height: 50px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 1565px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+    opacity: 0.2;
+}
+
+
+ul {
+    list-style: none;
+}
+
+ul li:before {
+    content:  "—";
+    position: relative;
+    left: -30px;
+}
