--- a/style.css
+++ b/style.css
@@ -719,51 +719,206 @@ ul li:before {
     position: relative;
     left: -30px;
 }
-<<<<<<< HEAD
 
 
-.page-title {
-  text-align: center;
+
+.lightbox {
+  display: none;
+
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1em;
+  background: rgba(0, 0, 0, 0.8);
 }
 
-.slider-container {
-  position: relative;
-  width: 600px;
-  height: 400px;
-  margin: 0 auto;
-  overflow: hidden;
+.lightbox:target {
+  display: block;
 }
 
-.slider {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
-.slider img {
+.lightbox span {
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.prev-button,
-.next-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
-  background-color: transparent;
-  border: none;
-  font-size: 24px;
-  color: white;
-}
 
-.prev-button {
-  left: 10px;
-}
+.layer1 {
+    position: absolute;
+    top: 160px;
+    left: 150px;
+    z-index: 2; }
 
-.next-button {
-  right: 10px;
-}
-=======
->>>>>>> 20e64ade9c60d6a13daa4fa46aaaf34db64ce11c
+
+.layer2 {
+    position: absolute;
+    top: 160px;
+    left: 400px;
+    z-index: 2; }
+
+.layer3 {
+    position: absolute;
+    top: 160px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer4 {
+    position: absolute;
+    top: 160px;
+    left: 900px;
+    z-index: 2; }
+
+
+
+    .layer5 {
+    position: absolute;
+    top: 360px;
+    left: 150px;
+    z-index: 2; }
+
+
+.layer6 {
+    position: absolute;
+    top: 360px;
+    left: 400px;
+    z-index: 2; }
+
+.layer7 {
+    position: absolute;
+    top: 360px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer8 {
+    position: absolute;
+    top: 360px;
+    left: 900px;
+    z-index: 2; }
+
+
+
+.layer9 {
+    position: absolute;
+    top: 560px;
+    left: 150px;
+    z-index: 2; }
+
+
+.layer10 {
+    position: absolute;
+    top: 560px;
+    left: 400px;
+    z-index: 2; }
+
+.layer11 {
+    position: absolute;
+    top: 560px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer12 {
+    position: absolute;
+    top: 560px;
+    left: 900px;
+    z-index: 2; }
+
+
+
+
+.layer13 {
+    position: absolute;
+    top: 760px;
+    left: 150px;
+    z-index: 2; }
+
+
+.layer14 {
+    position: absolute;
+    top: 760px;
+    left: 400px;
+    z-index: 2; }
+
+.layer15 {
+    position: absolute;
+    top: 760px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer16 {
+    position: absolute;
+    top: 760px;
+    left: 900px;
+    z-index: 2; }
+
+
+    .layer17 {
+    position: absolute;
+    top: 960px;
+    left: 150px;
+    z-index: 2; }
+
+
+.layer18 {
+    position: absolute;
+    top: 960px;
+    left: 400px;
+    z-index: 2; }
+
+.layer19 {
+    position: absolute;
+    top: 960px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer20 {
+    position: absolute;
+    top: 960px;
+    left: 900px;
+    z-index: 2; }
+
+
+
+    .layer21 {
+    position: absolute;
+    top: 1160px;
+    left: 150px;
+    z-index: 2; }
+
+
+.layer22 {
+    position: absolute;
+    top: 1160px;
+    left: 400px;
+    z-index: 2; }
+
+.layer23 {
+    position: absolute;
+    top: 1160px;
+    left: 650px;
+    z-index: 2; }
+
+
+.layer24 {
+    position: absolute;
+    top: 1160px;
+    left: 900px;
+    z-index: 2; }
+
+
+    .layer0 {
+    position: absolute;
+    top: 1360px;
+    left: 900px;
+    z-index: 2; 
+opacity: 0;}
