--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 .container .btn1 {
     position: absolute;
     top: 100px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(uslugi.jpg);
@@ -37,15 +37,15 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .container .btn2 {
     position: absolute;
     top: 300px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(ceny.jpg);
@@ -56,15 +56,15 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .container .btn3 {
     position: absolute;
     top: 500px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(bronirovanie.jpg);
@@ -75,15 +75,15 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .container .btn4 {
     position: absolute;
     top: 700px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(kontakty.jpg);
@@ -94,15 +94,15 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .container .btn5 {
     position: absolute;
     top: 900px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(photo.jpg);
@@ -113,15 +113,15 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .container .btn6 {
     position: absolute;
     top: 1100px;
-    left: 0px;
+    left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-image: url(onas.jpg);
@@ -132,20 +132,21 @@
     border: none;
     border-radius: 50%;
     text-align: center;
-    width: 150px; 
-    height: 150px;
+    width: 170px; 
+    height: 170px;
 }
 
 
 .text1{
     position: absolute;
-    top: 60px;
-    left: 120px;
+    top: 50px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
     text-decoration: none; 
 }
+
 
 
  A {
@@ -159,93 +160,93 @@
 
 .container .text1:hover {
    cursor: pointer;
-   font-size: 65px;
-   top: 45px;
-   left: 90px;
+   font-size: 75px;
+   top: 35px;
+   left: 380px;
 }
 
 .text2{
     position: absolute;
-    top: 260px;
-    left: 120px;
+    top: 250px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 .container .text2:hover {
    cursor: pointer;
-   font-size: 65px;
-   top: 245px;
-    left: 90px;
+   font-size: 75px;
+   top: 235px;
+    left: 380px;
 }
 
 .text3{
     position: absolute;
-    top: 460px;
-    left: 120px;
+    top: 450px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 
 .container .text3:hover {
    cursor: pointer;
-      font-size: 65px;
-   top: 445px;
-   left: 90px;
+      font-size: 75px;
+   top: 435px;
+   left: 380px;
 }
 
 .text4{
     position: absolute;
-    top: 660px;
-    left: 120px;
+    top: 650px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 
 .container .text4:hover {
    cursor: pointer;
-      font-size: 65px;
-   top: 645px;
-   left: 90px;
+      font-size: 75px;
+   top: 635px;
+   left: 380px;
 }
 
 .text5{
     position: absolute;
-    top: 860px;
-    left: 120px;
+    top: 850px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 
 .container .text5:hover {
    cursor: pointer;
-   font-size: 65px;
-   top: 845px;
-   left: 90px;
+   font-size: 75px;
+   top: 835px;
+   left: 380px;
 }
 
 .text6{
     position: absolute;
-    top: 1060px;
-    left: 120px;
+    top: 1050px;
+    left: 380px;
     color: black;
     font-family: segoe print;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 
 .container .text6:hover {
    cursor: pointer;
-   font-size: 65px;
-   top: 1045px;
-   left: 90px;
+   font-size: 75px;
+   top: 1035px;
+   left: 380px;
 }
 
 
@@ -947,10 +948,11 @@ opacity: 0;}
     overflow: hidden;
     position: relative;
     width: inherit;
+    background-color: transparent;
     -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
     -moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
     -o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 20px transparent;
 }
 
 .wrapper > input {
@@ -1309,4 +1311,40 @@ display: block;
     -moz-transform: scale(1);
     -o-transform: scale(1);
     transform: scale(1);
+}
+
+
+.layer25 {
+    position: absolute;
+    top: 700px;
+    left: 150px;
+    z-index: 2; }
+
+
+.textn{
+    position: absolute;
+    top: 550px;
+    left: -620px;
+    color: black;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-size: 86px;
+    transform: rotate(-90deg) scale(1, 4.5);
+    background: linear-gradient(#4AB58C 21%, #2A966D 14%, #28DE98 27%, #7DFFCD 35%, #85CCB1);
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.3;
+}
+
+.textnusl{
+    position: absolute;
+    top: 590px;
+    left: -610px;
+    color: black;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-size: 76px;
+    transform: rotate(-90deg) scale(1, 2.5);
+    background: linear-gradient(#4AB58C 21%, #2A966D 14%, #28DE98 27%, #7DFFCD 35%, #85CCB1);
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.3;
 }
