--- a/style.css
+++ b/style.css
@@ -1777,3 +1777,126 @@ height: 100px;
     font-weight: bold;
     opacity: 0;
 }
+
+
+
+ * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+
+        }
+        .container2 {
+            max-width: 900px;
+            margin: 0px auto;
+            border-radius: 50%;
+        }
+
+        .carousel {
+    margin: 0 auto;
+    position: absolute;
+    top: 150px;
+    left: 1300px;
+    width: 1000px;
+    height: 1000px;            border-radius: 50%;
+}
+    .carousel .carousel-indicators {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 15;
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+        list-style: none;
+    }
+        .carousel .carousel-indicators li {
+            flex: 0 1 auto;
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+            margin-left: 5px;
+            cursor: pointer;
+            background-color: #343a40;
+            border: 2px solid #fff;
+            border-radius: 35%;
+        }
+        .carousel .carousel-indicators .active {
+            background-color: #025fff;            
+            border-radius: 35%;
+        }
+    .carousel .carousel-window {
+        width: 100%;
+        height: 950px;
+        position: relative;
+        overflow: hidden;            
+        border-radius: 50%;
+    }
+    .carousel .carousel-slides {
+        height: 100%;
+        display: flex;
+        transition: transform 0.5s;            
+        border-radius: 50%;
+    }
+    .carousel .carousel-item {
+        height: 100%;            
+        border-radius: 50%;
+    }
+        .carousel .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;            
+            border-radius: 50%;
+        }
+    .carousel .carousel-prev, .carousel .carousel-next {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 300px;
+        top: 330px;
+        color: #fff;
+        opacity: 0.7;
+        text-align: center;
+        font-size: 40px;
+        text-decoration: none;            
+        border-radius: 50%;
+    }
+    .carousel .carousel-prev:hover, .carousel .carousel-next:hover {
+        opacity: 1;
+        background-color: rgba(0, 0, 0, 0.2);            
+        border-radius: 50%;
+    }
+    .carousel .carousel-prev {
+        left: 0;            
+        border-radius: 50%;
+    }
+    .carousel .carousel-next {
+        right: 0;            
+        border-radius: 50%;
+    }
+
+
+
+    .sq {
+position: absolute;
+width: 2379px;
+height: 115px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 0px;
+  left: -150px;
+
+align-items: center;
+justify-content: center;
+color: white;
+font-weight: lighter;
+    font-size: 27px;
+    font-family: Proxima Nova;
+}
