--- a/style.css
+++ b/style.css
@@ -137,17 +137,6 @@
 }
 
 
-.text1{
-    position: absolute;
-    top: 50px;
-    left: 380px;
-    color: black;
-    font-family: segoe print;
-    font-size: 60px;
-    text-decoration: none; 
-}
-
-
 
  A {
     text-decoration: none; /* Убирает подчеркивание для ссылок */
@@ -158,17 +147,27 @@
    } 
 
 
+.text1{
+    position: absolute;
+    top: 190px;
+    left: 200px;
+    color: black;
+    font-family: segoe print;
+    font-size: 60px;
+}
+
+
 .container .text1:hover {
    cursor: pointer;
    font-size: 75px;
-   top: 35px;
-   left: 380px;
+   top: 165px;
+   left: 200px;
 }
 
 .text2{
     position: absolute;
-    top: 250px;
-    left: 380px;
+    top: 535px;
+    left: 200px;
     color: black;
     font-family: segoe print;
     font-size: 60px;
@@ -177,14 +176,14 @@
 .container .text2:hover {
    cursor: pointer;
    font-size: 75px;
-   top: 235px;
-    left: 380px;
+   top: 510px;
+    left: 200px;
 }
 
 .text3{
     position: absolute;
-    top: 450px;
-    left: 380px;
+    top: 375px;
+    left: 530px;
     color: black;
     font-family: segoe print;
     font-size: 60px;
@@ -194,14 +193,14 @@
 .container .text3:hover {
    cursor: pointer;
       font-size: 75px;
-   top: 435px;
-   left: 380px;
+   top: 350px;
+   left: 530px;
 }
 
 .text4{
     position: absolute;
-    top: 650px;
-    left: 380px;
+    top: 730px;
+    left: 530px;
     color: black;
     font-family: segoe print;
     font-size: 60px;
@@ -211,14 +210,14 @@
 .container .text4:hover {
    cursor: pointer;
       font-size: 75px;
-   top: 635px;
-   left: 380px;
+   top: 705px;
+   left: 530px;
 }
 
 .text5{
     position: absolute;
-    top: 850px;
-    left: 380px;
+    top: 885px;
+    left: 200px;
     color: black;
     font-family: segoe print;
     font-size: 60px;
@@ -228,14 +227,14 @@
 .container .text5:hover {
    cursor: pointer;
    font-size: 75px;
-   top: 835px;
-   left: 380px;
+   top: 860px;
+   left: 200px;
 }
 
 .text6{
     position: absolute;
-    top: 1050px;
-    left: 380px;
+    top: 1035px;
+    left: 530px;
     color: black;
     font-family: segoe print;
     font-size: 60px;
@@ -245,8 +244,49 @@
 .container .text6:hover {
    cursor: pointer;
    font-size: 75px;
-   top: 1035px;
-   left: 380px;
+   top: 1010px;
+   left: 530px;
+}
+
+
+.k1{
+    position: absolute;
+    top: 160px;
+    left: 150px;
+}
+
+
+.k2{
+    position: absolute;
+    top: 510px;
+    left: 150px;
+}
+
+
+.k5{
+    position: absolute;
+    top: 860px;
+    left: 150px;
+}
+
+
+.k3{
+    position: absolute;
+    top: 350px;
+    left: 480px;
+}
+
+
+.k4{
+    position: absolute;
+    top: 700px;
+    left: 480px;
+}
+
+.k6{
+    position: absolute;
+    top: 1010px;
+    left: 490px;
 }
 
 
@@ -290,11 +330,12 @@
 .text9{
     position: absolute;
     top: 5px;
-    left: 400px;
+    left: 550px;
     color: black;
     font-family: segoe print;
     font-size: 56px;
     font-weight: bold;
+    width: 300px;
 }
 
 
@@ -327,7 +368,8 @@ input[type="text"]{
     position: relative;
 display: inline-block;
 width: 700px;
-height: 120px;
+height: 124px;
+top: -3px;
 box-sizing: border-box;
 outline: none;
 border: 0px solid lightgray;
@@ -340,7 +382,7 @@ font-weight: lighter;
     font-size: 50px;
     font-family: Proxima Nova;
     color: black;
-    opacity: 0.6;;
+    opacity: 0.6;
 }
 
 input[type="date"]{
@@ -582,7 +624,7 @@ font-weight: lighter;
 
 .usl3{
     position: absolute;
-    top: 540px;
+    top: 600px;
     font-size: 42px;
     font-family: FRANKLIN GOTHIC MEDIUM;
     font-weight: bold;
@@ -595,7 +637,7 @@ font-weight: lighter;
 .usl4{
     position: absolute;
     left: 0px;
-    top: 620px;
+    top: 680px;
     font-size: 30px;
     font-family: Proxima Nova;
     text-align: justify;
@@ -610,7 +652,7 @@ height: 50px;
   border: 0px solid black;
   background-color: #41A698;
   border-radius: 5px;
-  top: 540px;
+  top: 600px;
   left: 0px;
     display: flex;
 align-items: center;
@@ -626,7 +668,7 @@ font-weight: lighter;
 
 .usl5{
     position: absolute;
-    top: 1040px;
+    top: 1100px;
     font-size: 42px;
     font-family: FRANKLIN GOTHIC MEDIUM;
     font-weight: bold;
@@ -639,7 +681,7 @@ font-weight: lighter;
 .usl6{
     position: absolute;
     left: 0px;
-    top: 1120px;
+    top: 1180px;
     font-size: 30px;
     font-family: Proxima Nova;
     text-align: justify;
@@ -654,7 +696,7 @@ height: 50px;
   border: 0px solid black;
   background-color: #41A698;
   border-radius: 5px;
-  top: 1040px;
+  top: 1100px;
   left: 0px;
     display: flex;
 align-items: center;
@@ -670,7 +712,7 @@ font-weight: lighter;
 
 .usl7{
     position: absolute;
-    top: 1565px;
+    top: 1625px;
     font-size: 42px;
     font-family: FRANKLIN GOTHIC MEDIUM;
     font-weight: bold;
@@ -683,7 +725,7 @@ font-weight: lighter;
 .usl8{
     position: absolute;
     left: 0px;
-    top: 1650px;
+    top: 1710px;
     font-size: 30px;
     font-family: Proxima Nova;
     text-align: justify;
@@ -698,7 +740,7 @@ height: 50px;
   border: 0px solid black;
   background-color: #41A698;
   border-radius: 5px;
-  top: 1565px;
+  top: 1625px;
   left: 0px;
     display: flex;
 align-items: center;
@@ -754,27 +796,27 @@ ul li:before {
     position: absolute;
     top: 160px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer2 {
     position: absolute;
     top: 160px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer3 {
     position: absolute;
     top: 160px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer4 {
     position: absolute;
     top: 160px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 
@@ -782,27 +824,27 @@ ul li:before {
     position: absolute;
     top: 360px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer6 {
     position: absolute;
     top: 360px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer7 {
     position: absolute;
     top: 360px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer8 {
     position: absolute;
     top: 360px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 
@@ -810,27 +852,27 @@ ul li:before {
     position: absolute;
     top: 560px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer10 {
     position: absolute;
     top: 560px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer11 {
     position: absolute;
     top: 560px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer12 {
     position: absolute;
     top: 560px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 
@@ -838,54 +880,54 @@ ul li:before {
     position: absolute;
     top: 760px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer14 {
     position: absolute;
     top: 760px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer15 {
     position: absolute;
     top: 760px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer16 {
     position: absolute;
     top: 760px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
     .layer17 {
     position: absolute;
     top: 960px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer18 {
     position: absolute;
     top: 960px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer19 {
     position: absolute;
     top: 960px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer20 {
     position: absolute;
     top: 960px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 
@@ -893,27 +935,27 @@ ul li:before {
     position: absolute;
     top: 1160px;
     left: 150px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer22 {
     position: absolute;
     top: 1160px;
     left: 400px;
-    z-index: 2; }
+    z-index: 0; }
 
 .layer23 {
     position: absolute;
     top: 1160px;
     left: 650px;
-    z-index: 2; }
+    z-index: 0; }
 
 
 .layer24 {
     position: absolute;
     top: 1160px;
     left: 900px;
-    z-index: 2; }
+    z-index: 0; }
 
 
     .layer0 {
@@ -1317,26 +1359,12 @@ display: block;
     position: absolute;
     top: 660px;
     left: 190px;
-    z-index: 2; }
+    z-index: 0; }
 
-
-.textn{
-    position: absolute;
-    top: 550px;
-    left: -620px;
-    color: black;
-    font-family: FRANKLIN GOTHIC MEDIUM;
-    font-size: 86px;
-    transform: rotate(-90deg) scale(1, 4.5);
-    background: linear-gradient(#4AB58C 21%, #2A966D 14%, #28DE98 27%, #7DFFCD 35%, #85CCB1);
-    -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  opacity: 0.3;
-}
 
 .textnusl{
     position: absolute;
-    top: 590px;
+    top: 612px;
     left: -610px;
     color: black;
     font-family: FRANKLIN GOTHIC MEDIUM;
@@ -1346,6 +1374,7 @@ display: block;
     -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0.3;
+  width: 1055px;
 }
 
 
@@ -1539,44 +1568,6 @@ height: 100px;
 }
 
 
-.k1{
-    position: absolute;
-    top: 20px;
-    left: 340px;
-}
-
-
-.k2{
-    position: absolute;
-    top: 220px;
-    left: 340px;
-}
-
-
-.k3{
-    position: absolute;
-    top: 430px;
-    left: 340px;
-}
-
-.k4{
-    position: absolute;
-    top: 625px;
-    left: 340px;
-}
-
-.k5{
-    position: absolute;
-    top: 830px;
-    left: 340px;
-}
-
-.k6{
-    position: absolute;
-    top: 1025px;
-    left: 340px;
-}
-
 
 
 .kont1{
@@ -1726,7 +1717,7 @@ height: 100px;
    TH { 
 
     text-align: center;
-    border: 1px solid black; 
+    border: 1px solid rgb(161, 155, 155); 
     padding: 4px;
    }
 
@@ -1885,13 +1876,12 @@ height: 100px;
 
     .sq {
 position: absolute;
-width: 2379px;
+width: 2500px;
 height: 115px;
   border: 0px solid black;
   background-color: #41A698;
-  border-radius: 5px;
   top: 0px;
-  left: -150px;
+  left: 0px;
 
 align-items: center;
 justify-content: center;
@@ -1899,4 +1889,66 @@ color: white;
 font-weight: lighter;
     font-size: 27px;
     font-family: Proxima Nova;
+}
+
+
+.lr {
+    position: absolute;
+    z-index: 3; }
+
+
+    .textn{
+    position: absolute;
+    top: 25px;
+    left: 900px;
+    color: black;
+    font-family: FRANKLIN GOTHIC MEDIUM;
+    font-size: 50px;
+    transform: scale(1, 3);
+    /*background: linear-gradient(white 26%, white 14%, white 27%, white 35%, white);*/
+    background: white;
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.4;
+  width: 1500px;
+}
+
+
+
+.inst{
+    position: absolute;
+    top: 20px;
+    left: 2350px;
+}
+
+
+.fcb{
+    position: absolute;
+    top: 20px;
+    left: 2150px;
+}
+
+
+
+.vk{
+    position: absolute;
+    top: 20px;
+    left: 2250px;
+}
+
+.rnd {
+    position: absolute;
+width: 1000px;
+height: 50px;
+  border: 0px solid black;
+  background-color: #41A698;
+  border-radius: 5px;
+  top: 2170px;
+  left: 0px;
+    display: flex;
+align-items: center;
+justify-content: center;
+color: red;
+
+    opacity: 0;
 }
