--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .bkimg{
     width: 100%;
     height: 100%;
-    background: url(agr.png);
+    background: url(./images/agr.png);
     background-size: cover;
 
 }
@@ -29,7 +29,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(uslugi.jpg);
+    background-image: url(./images/uslugi.jpg);
     background-position: -300px;
     color: white;
     font-size: 16px;
@@ -48,7 +48,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(ceny.jpg);
+    background-image: url(./images/ceny.jpg);
     background-position: -420px;
     color: white;
     font-size: 16px;
@@ -67,7 +67,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(bronirovanie.jpg);
+    background-image: url(./images/bronirovanie.jpg);
     background-position: -380px;
     color: white;
     font-size: 16px;
@@ -86,7 +86,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(kontakty.jpg);
+    background-image: url(./images/kontakty.jpg);
     background-position: -940px;
     color: white;
     font-size: 16px;
@@ -105,7 +105,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(photo.jpg);
+    background-image: url(./images/photo.jpg);
     background-position: top 350px left 440px;
     color: white;
     font-size: 16px;
@@ -124,7 +124,7 @@
     left: 250px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(onas.jpg);
+    background-image: url(./images/onas.jpg);
     background-position: -400px,-200px;
     color: white;
     font-size: 16px;
@@ -296,7 +296,7 @@
     left: 0px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-image: url(uslugi.jpg);
+    background-image: url(./images/uslugi.jpg);
     background-position: -300px;
     color: white;
     font-size: 16px;
@@ -1009,7 +1009,7 @@ opacity: 0;}
 
 
 .slide1 { 
-    background-image: url(1.jpg); 
+    background-image: url(./images/1.jpg); 
     display: block;
   width: 100%;
   height: 100%;
@@ -1018,7 +1018,7 @@ opacity: 0;}
   background-size: contain;
 }
 .slide2 {
- background-image: url(2.jpg); 
+ background-image: url(./images/2.jpg); 
 display: block;
   width: 100%;
   height: 100%;
@@ -1027,7 +1027,7 @@ display: block;
   background-size: contain;
 }
 .slide3 { 
-    background-image: url(3.jpg); 
+    background-image: url(./images/3.jpg); 
 display: block;
   width: 100%;
   height: 100%;
@@ -1036,7 +1036,7 @@ display: block;
   background-size: contain;
 }
 .slide4 { 
-    background-image: url(4.jpg); 
+    background-image: url(./images/4.jpg); 
 display: block;
   width: 100%;
   height: 100%;
@@ -1045,7 +1045,7 @@ display: block;
   background-size: contain;
 }
 .slide5 { 
-    background-image: url(5.jpg);
+    background-image: url(./images/5.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1054,7 +1054,7 @@ display: block;
   background-size: contain;
  }
  .slide6 { 
-    background-image: url(6.jpg);
+    background-image: url(./images/6.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1063,7 +1063,7 @@ display: block;
   background-size: contain;
  }
  .slide7 { 
-    background-image: url(7.jpg);
+    background-image: url(./images/7.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1072,7 +1072,7 @@ display: block;
   background-size: contain;
  }
  .slide8 { 
-    background-image: url(8.jpg);
+    background-image: url(./images/8.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1081,7 +1081,7 @@ display: block;
   background-size: contain;
  }
  .slide9 { 
-    background-image: url(9.jpg);
+    background-image: url(./images/9.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1090,7 +1090,7 @@ display: block;
   background-size: contain;
  }
  .slide10 { 
-    background-image: url(10.jpg);
+    background-image: url(./images/10.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1099,7 +1099,7 @@ display: block;
   background-size: contain;
  }
  .slide11 { 
-    background-image: url(11.jpg);
+    background-image: url(./images/11.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1108,7 +1108,7 @@ display: block;
   background-size: contain;
  }
  .slide12 { 
-    background-image: url(12.jpg);
+    background-image: url(./images/12.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1117,7 +1117,7 @@ display: block;
   background-size: contain;
  }
  .slide13 { 
-    background-image: url(13.jpg);
+    background-image: url(./images/13.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1126,7 +1126,7 @@ display: block;
   background-size: contain;
  }
  .slide14 { 
-    background-image: url(14.jpg);
+    background-image: url(./images/14.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1135,7 +1135,7 @@ display: block;
   background-size: contain;
  }
  .slide15 { 
-    background-image: url(15.jpg);
+    background-image: url(./images/15.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1144,7 +1144,7 @@ display: block;
   background-size: contain;
  }
  .slide16 { 
-    background-image: url(16.jpg);
+    background-image: url(./images/16.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1153,7 +1153,7 @@ display: block;
   background-size: contain;
  }
  .slide17 { 
-    background-image: url(17.jpg);
+    background-image: url(./images/17.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1162,7 +1162,7 @@ display: block;
   background-size: contain;
  }
  .slide18 { 
-    background-image: url(18.jpg);
+    background-image: url(./images/18.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1171,7 +1171,7 @@ display: block;
   background-size: contain;
  }
  .slide19 { 
-    background-image: url(19.jpg);
+    background-image: url(./images/19.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1180,7 +1180,7 @@ display: block;
   background-size: contain;
  }
  .slide20 { 
-    background-image: url(20.jpg);
+    background-image: url(./images/20.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1189,7 +1189,7 @@ display: block;
   background-size: contain;
  }
  .slide21 { 
-    background-image: url(21.jpg);
+    background-image: url(./images/21.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1198,7 +1198,7 @@ display: block;
   background-size: contain;
  }
  .slide22 { 
-    background-image: url(22.jpg);
+    background-image: url(./images/22.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1207,7 +1207,7 @@ display: block;
   background-size: contain;
  }
  .slide23 { 
-    background-image: url(23.jpg);
+    background-image: url(./images/23.jpg);
 display: block;
   width: 100%;
   height: 100%;
@@ -1216,7 +1216,7 @@ display: block;
   background-size: contain;
  }
  .slide24 { 
-    background-image: url(24.jpg);
+    background-image: url(./images/24.jpg);
 display: block;
   width: 100%;
   height: 100%;
